--- a/auth/package.json
+++ b/auth/package.json
@@ -40,5 +40,10 @@
     "mongodb-memory-server": "^8.0.3",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.7"
+  },
+  "config": {
+    "mongodbMemoryServer": {
+      "version": "v4.4-latest"
+    }
   }
 }
