--- a/auth/package.json
+++ b/auth/package.json
@@ -37,13 +37,13 @@
     "@types/jest": "^27.0.3",
     "@types/supertest": "^2.0.11",
     "jest": "^27.3.1",
-    "mongodb-memory-server": "^8.0.3",
+    "mongodb-memory-server": "^6.5.1",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.7"
   },
   "config": {
     "mongodbMemoryServer": {
-      "version": "v4.4-latest"
+      "version": "latest"
     }
   }
 }
